--- a/index.html
+++ b/index.html
@@ -17,24 +17,111 @@
       <a class="nav-link" href="">SERVICE</a>
       <a class="nav-link" href="">CONTACT</a>
     </div>
-    <p class="nav-link">+92 (312) 025 1371</p>
+    <p class="nav-link"><img src="./images/Screenshot (19).png" alt="">+92 (312) 025 1371</p>
     <img class="nav-img" src="images/Screenshot (2).png" alt="">
   </nav>
   <main>
     <div class="main-div">
       <img class="div-img" src="./images/download.jpeg" alt="">
       <div>
-        <p class="heading1">Certified Public Accountant Based in Karachi, Pakistan </p>
-      <h1 class="h1"> Muneeb Shahzad</h1>
-      <p class="h2">Muneeb Shahzad is based in Karachi,pakistan and</p>
-      <p class="heading2">offers comprehensive services for small</p>
-      <p class="heading2">businesses, start-up companies and ⁠⁠individuals</p>
-      <p class="heading2">Muneeb is an expert in bookkeeping,a advisory</p>
-      <p class="heading2">and estate planning</p>
-      <button class="main-button">contact</button>
+        <h1 class="heading1">Certified Public Accountant Based in Karachi, Pakistan </h1>
+        <h1 class="h1"> Muneeb Shahzad</h1>
+        <p class="heading2">Muneeb Shahzad is based in Karachi, Pakistan and offers comprehensive services for small
+          businesses, start-up companies and ⁠⁠individuals. Muneeb is an expert in bookkeeping, a advisory and estate
+          planning.</p>
+        <button class="main-button">contact</button>
+      </div>
+    </div>
+    <div class="underline"></div>
+    <div class="images">
+      <img src="./images/img6.png" alt="" width="100px" height="100px">
+      <img src="./images/img1.png" alt="" width="100px" height="100px">
+      <img src="./images/img2.png" alt="" width="100px" height="100px">
+      <img src="./images/img3.jpeg" alt="" width="100px" height="100px">
+      <img src="./images/img4.png" alt="" width="100px" height="100px">
+    </div>
+    <div class="main-div2">
+      <h1 class="heading3">Learn more about my services</h1>
+      <div class="sub-div2">
+        <div class="main-div3">
+          <div class="image-div">
+            <img class="image" src="./images/Screenshot (3).png" alt="">
+            <p class="image-text">Regulatory Compliance & Reporting</p>
+          </div>
+          <div class="image-div">
+            <img class="image" src="./images/Screenshot (3).png" alt="">
+            <p class="image-text">business development</p>
+          </div>
+          <div class="image-div">
+            <img class="image" src="./images/Screenshot (3).png" alt="">
+            <p class="image-text">personal injuries</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div>
+      <h1 class="heading4">Who I work with</h1>
+      <div class="main-div4">
+        <div class="sub-div3">
+          <img src="./images/Screenshot (4).png" alt="">
+          <p class="image-text2">Mid-Sized Companies</p>
+        </div>
+        <div class="sub-div3">
+          <img src="./images/Screenshot (5).png" alt="">
+          <p class="image-text2">Non-Profit Organizations</p>
+        </div>
+        <div class="sub-div3">
+          <img src="./images/Screenshot (6).png" alt="">
+          <p class="image-text2">Large Corporations</p>
+        </div>
+      </div>
+    </div>
+    <div class="main-div5">
+      <h1 class="heading5">Stay in touch</h1>
+      <h3 class="Sub-heading1">Send a message</h3>
+      <div class="sub-div4">
+        <div>
+          <h3 class="Sub-heading2"><img src="./images/Screenshot (18).png" alt="">+92 (312) 025 1371</h3>
+        </div>
+        <div>
+          <h3 class="Sub-heading2"> <img src="./images/Screenshot (19).png" alt="">muneebshahzad244@gmail.com</h3>
+        </div>
+      </div>
+      <div class="main-div6">
+        <div>
+          <p class="text">Your Name</p>
+          <input class="input-text" type="text" placeholder="Your Name">
+          <p class="text"> Your Email</p>
+          <input class="input-text" type="text" placeholder="Your Email">
+          <p class="text">Subject</p>
+          <input class="input-text" type="text" placeholder="Subject">
+          <button class="button2">Send Message</button>
+        </div>
+        <div>
+          <p class="text">comments</p>
+          <input class="input-text2" type="text">
+          <button class="button3">contact</button>
+        </div>
       </div>
     </div>
   </main>
+  <footer class="footer">
+    <div>
+      <a href="www.youtube.com"><img src="./images/Screenshot (7).png" alt=""></a>
+      <a href="www.facebook.com"><img src="./images/Screenshot (8).png" alt=""></a>
+      <a href=""><img src="./images/Screenshot (9).png" alt=""></a>
+      <a href=""><img src="./images/Screenshot (10).png" alt=""></a>
+      <a href=""><img src="./images/Screenshot (11).png" alt=""></a>
+      <a href=""><img src="./images/Screenshot (12).png" alt=""></a>
+      <a href=""><img src="./images/Screenshot (13).png" alt=""></a>
+      <a href=""><img src="./images/Screenshot (14).png" alt=""></a>
+      <a href=""><img src="./images/Screenshot (15).png" alt=""></a>
+      <a href=""><img src="./images/Screenshot (16).png" alt=""></a>
+      <a href=""><img src="./images/Screenshot (17).png" alt=""></a>
+    </div>
+    <p class="footer-text">Muneeb Shahzad</p>
+    <p class="footer-text2">Powered by PracticeTab</p>
+  </footer>
 </body>
 
 </html>
