--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <a class="nav-link" href="">SERVICE</a>
       <a class="nav-link" href="">CONTACT</a>
     </div>
-    <p class="nav-link"><img src="./images/Screenshot (19).png" alt="">+92 (312) 025 1371</p>
+    <p class="nav-name">+92 (312) 025 1371</p>
     <img class="nav-img" src="images/Screenshot (2).png" alt="">
   </nav>
   <main>
